--- a/NN_Training.ipynb
+++ b/NN_Training.ipynb
@@ -5,7 +5,7 @@
    "id": "1c454524-0524-4852-8884-b65e1e68e65a",
    "metadata": {},
    "source": [
-    "# [CML Project Title]\n",
+    "# Classifying Potentially Dangerous Asteroids\n",
     "## Dane Lacey, Julien Schwalbe, Stasiani-Diana Tzouvara, Ahmet Gueler"
    ]
   },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "e80e62c6-d348-436b-a961-8ea0e4618f90",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\danec\\AppData\\Local\\Temp/ipykernel_12348/1846278508.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "C:\\Users\\danec\\AppData\\Local\\Temp/ipykernel_12576/1846278508.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  orbits_df.drop(orbits_df.columns.difference(features_of_interest), 1, inplace=True)\n"
      ]
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "3cdfb188-fd37-46f3-bd3b-259e1df0d2ac",
    "metadata": {},
    "outputs": [
@@ -868,44 +868,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7346</th>\n",
-       "      <td>0.5334</td>\n",
-       "      <td>2.4078</td>\n",
-       "      <td>2.900254e+11</td>\n",
-       "      <td>6.996974e+10</td>\n",
-       "      <td>9.295553e+14</td>\n",
+       "      <th>8227</th>\n",
+       "      <td>0.3571</td>\n",
+       "      <td>7.4224</td>\n",
+       "      <td>2.873326e+11</td>\n",
+       "      <td>7.102198e+10</td>\n",
+       "      <td>9.252299e+14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4192</th>\n",
-       "      <td>0.6445</td>\n",
-       "      <td>2.7018</td>\n",
-       "      <td>3.151130e+11</td>\n",
-       "      <td>6.173762e+10</td>\n",
-       "      <td>9.689254e+14</td>\n",
+       "      <th>6935</th>\n",
+       "      <td>0.4796</td>\n",
+       "      <td>6.2805</td>\n",
+       "      <td>3.470521e+11</td>\n",
+       "      <td>5.351721e+10</td>\n",
+       "      <td>1.016844e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>0.1827</td>\n",
-       "      <td>18.9337</td>\n",
-       "      <td>1.446312e+11</td>\n",
-       "      <td>1.988700e+11</td>\n",
-       "      <td>6.564297e+14</td>\n",
+       "      <th>15408</th>\n",
+       "      <td>0.5003</td>\n",
+       "      <td>5.4341</td>\n",
+       "      <td>3.494606e+11</td>\n",
+       "      <td>5.291754e+10</td>\n",
+       "      <td>1.020367e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15477</th>\n",
-       "      <td>0.2858</td>\n",
-       "      <td>3.2105</td>\n",
-       "      <td>2.129226e+11</td>\n",
-       "      <td>1.111307e+11</td>\n",
-       "      <td>7.964676e+14</td>\n",
+       "      <th>14957</th>\n",
+       "      <td>0.2001</td>\n",
+       "      <td>18.1219</td>\n",
+       "      <td>2.183830e+11</td>\n",
+       "      <td>1.073421e+11</td>\n",
+       "      <td>8.066155e+14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2738</th>\n",
-       "      <td>0.6300</td>\n",
-       "      <td>20.0548</td>\n",
-       "      <td>4.766039e+11</td>\n",
-       "      <td>3.320043e+10</td>\n",
-       "      <td>1.191615e+15</td>\n",
+       "      <th>9936</th>\n",
+       "      <td>0.5794</td>\n",
+       "      <td>1.7268</td>\n",
+       "      <td>3.095928e+11</td>\n",
+       "      <td>6.339509e+10</td>\n",
+       "      <td>9.604010e+14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -913,21 +913,21 @@
       ],
       "text/plain": [
        "       Orbit Eccentricity  Orbit Inclination (deg)  Orbit Axis (m)  \\\n",
-       "7346               0.5334                   2.4078    2.900254e+11   \n",
-       "4192               0.6445                   2.7018    3.151130e+11   \n",
-       "23                 0.1827                  18.9337    1.446312e+11   \n",
-       "15477              0.2858                   3.2105    2.129226e+11   \n",
-       "2738               0.6300                  20.0548    4.766039e+11   \n",
+       "8227               0.3571                   7.4224    2.873326e+11   \n",
+       "6935               0.4796                   6.2805    3.470521e+11   \n",
+       "15408              0.5003                   5.4341    3.494606e+11   \n",
+       "14957              0.2001                  18.1219    2.183830e+11   \n",
+       "9936               0.5794                   1.7268    3.095928e+11   \n",
        "\n",
        "       Avg. Mean Speed (m/s)  Specific Ang. Momentum (m^2/s)  \n",
-       "7346            6.996974e+10                    9.295553e+14  \n",
-       "4192            6.173762e+10                    9.689254e+14  \n",
-       "23              1.988700e+11                    6.564297e+14  \n",
-       "15477           1.111307e+11                    7.964676e+14  \n",
-       "2738            3.320043e+10                    1.191615e+15  "
+       "8227            7.102198e+10                    9.252299e+14  \n",
+       "6935            5.351721e+10                    1.016844e+15  \n",
+       "15408           5.291754e+10                    1.020367e+15  \n",
+       "14957           1.073421e+11                    8.066155e+14  \n",
+       "9936            6.339509e+10                    9.604010e+14  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "d1750345-65f8-480c-88ee-096144ce81ee",
    "metadata": {},
    "outputs": [],
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "5a41c095-2068-469d-94f0-2689246d7276",
    "metadata": {},
    "outputs": [],
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "545dd372-0ea8-4ced-b3ac-841f42f53681",
    "metadata": {},
    "outputs": [],
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "d65161fc-4426-4053-b5b0-92a1f551a43a",
    "metadata": {},
    "outputs": [],
@@ -990,9 +990,9 @@
     "\n",
     "model = keras.Sequential([\n",
     "    keras.layers.Input(shape=(5,)),  # input layer (1)\n",
-    "    keras.layers.Dense(7, activation='relu'),  # hidden layer (2)\n",
-    "    keras.layers.Dense(3, activation='relu'),  # hidden layer (3)\n",
-    "    keras.layers.Dense(2, activation='relu') # output layer (4)\n",
+    "    keras.layers.Dense(7, activation='sigmoid'),  # hidden layer (2)\n",
+    "    keras.layers.Dense(3, activation='sigmoid'),  # hidden layer (3)\n",
+    "    keras.layers.Dense(1, activation='sigmoid') # output layer (4)\n",
     "])\n",
     "\n",
     "# model = keras.Sequential()\n",
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "26e5f624-eb2c-49e8-9a4a-c9b6c8ab9087",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "e99fd8d8-2d81-408b-beb9-0c662c53e313",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "8a40096e-b87d-449c-8225-c8a7e6c5baeb",
    "metadata": {},
    "outputs": [
@@ -1036,24 +1036,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1095/1095 [==============================] - 2s 1ms/step - loss: 0.6794 - accuracy: 0.9560\n",
+      "1095/1095 [==============================] - 2s 1ms/step - loss: 0.2525 - accuracy: 0.9568\n",
       "Epoch 2/5\n",
-      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.6794 - accuracy: 0.9560\n",
+      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.1780 - accuracy: 0.9568\n",
       "Epoch 3/5\n",
-      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.6794 - accuracy: 0.9560\n",
+      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.1774 - accuracy: 0.9568\n",
       "Epoch 4/5\n",
-      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.6794 - accuracy: 0.9560\n",
+      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.1769 - accuracy: 0.9568\n",
       "Epoch 5/5\n",
-      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.6794 - accuracy: 0.9560\n"
+      "1095/1095 [==============================] - 1s 1ms/step - loss: 0.1763 - accuracy: 0.9568\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1e7e51527c0>"
+       "<keras.callbacks.History at 0x1a38efad670>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,10 +1064,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c5d2e77f-af9f-4e58-aff7-8e549a9e36de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147/147 [==============================] - 0s 1ms/step - loss: 0.1788 - accuracy: 0.9561\n",
+      "Test accuracy: 0.9560860991477966\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = model.evaluate(test_df,  test_targets, verbose=1) \n",
     "\n",
